--- a/404.html
+++ b/404.html
@@ -20,15 +20,22 @@ permalink: 404.html
       }
 </style>
 
-<pre>         
- _____   _____    _____    _____   _____         _   _   _____   _   _  
-| ____| |  _  \  |  _  \  /  _  \ |  _  \       | | | | /  _  \ | | | | 
-| |__   | |_| |  | |_| |  | | | | | |_| |       | |_| | | | | | | |_| | 
-|  __|  |  _  /  |  _  /  | | | | |  _  /       \___  | | |/| | \___  | 
-| |___  | | \ \  | | \ \  | |_| | | | \ \           | | | |_| |     | | 
-|_____| |_|  \_\ |_|  \_\ \_____/ |_|  \_\          |_| \_____/     |_| 
+<center><pre>         
+ _____   _____    _____    _____   _____   
+| ____| |  _  \  |  _  \  /  _  \ |  _  \  
+| |__   | |_| |  | |_| |  | | | | | |_| |  
+|  __|  |  _  /  |  _  /  | | | | |  _  /  
+| |___  | | \ \  | | \ \  | |_| | | | \ \  
+|_____| |_|  \_\ |_|  \_\ \_____/ |_|  \_\ 
+
+ _   _   _____   _   _  
+| | | | /  _  \ | | | | 
+| |_| | | | | | | |_| | 
+\___  | | |/| | \___  | 
+    | | | |_| |     | | 
+    |_| \_____/     |_| 
     
-</pre>
+</pre></center>
 
 <p>你要访问的页面无法打开，先看点别的吧..</p>
 
